--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@auth/prisma-adapter": "^2.4.2",
     "@hookform/resolvers": "^3.9.0",
     "@lucide/lab": "^0.1.2",
-    "@prisma/client": "^5.18.0",
+    "@prisma/client": "^5.19.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -40,6 +40,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-resizable-panels": "^2.1.2",
     "react-spinners": "^0.14.1",
     "resend": "^3.5.0",
     "sonner": "^1.5.0",
@@ -56,7 +57,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
-    "prisma": "^5.18.0",
+    "prisma": "^5.19.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
